// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`remote generator > bundler=webpack > should create the remote with the correct config files 1`] = `
"const { NxAppWebpackPlugin } = require('@nx/webpack/app-plugin');
const { NxReactWebpackPlugin } = require('@nx/react/webpack-plugin');
const { withModuleFederation } = require('@nx/module-federation/webpack');

const baseConfig = require('./module-federation.config');

const config = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
module.exports = async () => {
  const configureFederation = await withModuleFederation(config, { dts: false });
  const webpackConfig = configureFederation({
    mode: process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
      ? process.env.NODE_ENV
      : 'none',
    output: {},
    plugins: [],
  }, undefined);
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  webpackConfig.plugins.unshift(
    new NxAppWebpackPlugin(),
    new NxReactWebpackPlugin(),
    {
      apply(compiler) {
        if (runtimeChunk !== undefined) {
          compiler.options.optimization.runtimeChunk = runtimeChunk;
        }
      },
    },
  );
  return webpackConfig;
};
"
`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files 2`] = `"module.exports = require('./webpack.config');"`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files 3`] = `
"/**
* Nx requires a default export of the config to allow correct resolution of the module federation graph.
**/
module.exports = {
  name: 'test',
  exposes: {
    './Module': './src/remote-entry.ts',
  },
};
"
`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files when --js=true 1`] = `
"const { NxAppWebpackPlugin } = require('@nx/webpack/app-plugin');
const { NxReactWebpackPlugin } = require('@nx/react/webpack-plugin');
const { withModuleFederation } = require('@nx/module-federation/webpack');

const baseConfig = require('./module-federation.config');

const config = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
module.exports = async () => {
  const configureFederation = await withModuleFederation(config, { dts: false });
  const webpackConfig = configureFederation({
    mode: process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
      ? process.env.NODE_ENV
      : 'none',
    output: {},
    plugins: [],
  }, undefined);
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  webpackConfig.plugins.unshift(
    new NxAppWebpackPlugin(),
    new NxReactWebpackPlugin(),
    {
      apply(compiler) {
        if (runtimeChunk !== undefined) {
          compiler.options.optimization.runtimeChunk = runtimeChunk;
        }
      },
    },
  );
  return webpackConfig;
};
"
`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files when --js=true 2`] = `"module.exports = require('./webpack.config');"`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files when --js=true 3`] = `
"/**
* Nx requires a default export of the config to allow correct resolution of the module federation graph.
**/
module.exports = {
  name: 'test',
  exposes: {
    './Module': './src/remote-entry.js',
  },
};
"
`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files when --typescriptConfiguration=true 1`] = `
"import { NxAppWebpackPlugin } from '@nx/webpack/app-plugin';
import type { Compiler } from 'webpack';
import { NxReactWebpackPlugin } from '@nx/react/webpack-plugin';
import { withModuleFederation } from '@nx/module-federation/webpack';

import baseConfig from './module-federation.config';

const config = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
export default async () => {
  const configureFederation = await withModuleFederation(config, { dts: false });
  const webpackConfig = configureFederation(
    {
      mode:
        process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
          ? process.env.NODE_ENV
          : 'none',
      output: {},
      plugins: [],
    },
    undefined,
  );
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  webpackConfig.plugins.unshift(new NxAppWebpackPlugin(), new NxReactWebpackPlugin(), {
    apply(compiler: Compiler) {
      if (runtimeChunk !== undefined) {
        compiler.options.optimization.runtimeChunk = runtimeChunk;
      }
    },
  });
  return webpackConfig;
};
"
`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files when --typescriptConfiguration=true 2`] = `
"export default require('./webpack.config');
"
`;

exports[`remote generator > bundler=webpack > should create the remote with the correct config files when --typescriptConfiguration=true 3`] = `
"import type { ModuleFederationConfig } from '@nx/module-federation';

const config: ModuleFederationConfig = {
  name: 'test',
  exposes: {
    './Module': './src/remote-entry.ts',
  },
};

/**
 * Nx requires a default export of the config to allow correct resolution of the module federation graph.
 **/
export default config;
"
`;

exports[`remote generator > bundler=webpack > should generate correct remote with config files when using --ssr 1`] = `
"const { NxAppWebpackPlugin } = require('@nx/webpack/app-plugin');
const { NxReactWebpackPlugin } = require('@nx/react/webpack-plugin');
const {withModuleFederationForSSR} = require('@nx/module-federation/webpack');

const baseConfig = require("./module-federation.server.config");

const defaultConfig = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
module.exports = async () => {
  const configureFederation = await withModuleFederationForSSR(defaultConfig, { dts: false });
  const webpackConfig = configureFederation({
    mode: process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
      ? process.env.NODE_ENV
      : 'none',
    entry: {},
    output: { library: { type: 'commonjs' } },
    plugins: [],
  });
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  const target = webpackConfig.target;
  webpackConfig.plugins.unshift(
    new NxAppWebpackPlugin({ ssr: true }),
    new NxReactWebpackPlugin(),
    {
      apply(compiler) {
        if (runtimeChunk !== undefined) {
          compiler.options.optimization.runtimeChunk = runtimeChunk;
        }
        compiler.options.target = target;
      },
    },
  );
  return webpackConfig;
};
"
`;

exports[`remote generator > bundler=webpack > should generate correct remote with config files when using --ssr 2`] = `
"/**
* Nx requires a default export of the config to allow correct resolution of the module federation graph.
**/
module.exports = {
  name: 'test',
  exposes: {
    './Module': 'test/src/remote-entry.ts',
  },
};
"
`;

exports[`remote generator > bundler=webpack > should generate correct remote with config files when using --ssr and --typescriptConfiguration=true 1`] = `
"import { NxAppWebpackPlugin } from '@nx/webpack/app-plugin';
import type { Compiler } from 'webpack';
import { NxReactWebpackPlugin } from '@nx/react/webpack-plugin';
import { withModuleFederationForSSR } from '@nx/module-federation/webpack';

import baseConfig from './module-federation.server.config';

const defaultConfig = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
export default async () => {
  const configureFederation = await withModuleFederationForSSR(defaultConfig, { dts: false });
  const webpackConfig = configureFederation({
    mode:
      process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
        ? process.env.NODE_ENV
        : 'none',
    entry: {},
    output: { library: { type: 'commonjs' } },
    plugins: [],
  });
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  const target = webpackConfig.target;
  webpackConfig.plugins.unshift(new NxAppWebpackPlugin({ ssr: true }), new NxReactWebpackPlugin(), {
    apply(compiler: Compiler) {
      if (runtimeChunk !== undefined) {
        compiler.options.optimization.runtimeChunk = runtimeChunk;
      }
      compiler.options.target = target;
    },
  });
  return webpackConfig;
};
"
`;

exports[`remote generator > bundler=webpack > should generate correct remote with config files when using --ssr and --typescriptConfiguration=true 2`] = `
"import type { ModuleFederationConfig } from '@nx/module-federation';

const config: ModuleFederationConfig = {
  name: 'test',
  exposes: {
    './Module': 'test/src/remote-entry.ts',
  },
};

/**
 * Nx requires a default export of the config to allow correct resolution of the module federation graph.
 **/
export default config;
"
`;
